--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,8 +1,10 @@
 
 nelmio_cors:
     defaults:
-        origin_regex: true
-        allow_origin: ['http://localhost:4200']
+#        origin_regex: true
+#        allow_origin: ['http://localhost:4200']
+        allow_origin: [ '*' ]
+#        allow_headers: [ '*' ]
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
         allow_headers: ['Content-Type', 'Authorization']
         expose_headers: ['Link']
