--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,10 +21,12 @@ security:
             methods: [ GET ]
             pattern: ^/api/users
             security: false
-        main:
-            pattern: ^/auth
+        api:
+            pattern: ^/api/
             stateless: true
             provider: users
+            jwt: ~
+        main:
             json_login:
                 check_path: auth
                 username_path: username
@@ -42,7 +44,7 @@ security:
             provider: users
             form_login:
                 login_path: app_login
-                check_path: app_login
+                check_path: login
                 enable_csrf: true
                 csrf_parameter: _csrf_token
                 default_target_path: app_admin
@@ -64,14 +66,14 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/admin/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/nfts, method: GET, roles: PUBLIC_ACCESS }
-        - { path: ^/api/users, method: POST, roles: ROLE_USER }
         - { path: ^/api/categories, method: GET, roles: PUBLIC_ACCESS }
         - { path: ^/api/galleries, method: GET, roles: PUBLIC_ACCESS }
         - { path: ^/api/galleries, methods: POST, roles: ROLE_USER }
         - { path: ^/api/nfts, methods: POST, roles: ROLE_USER}
-        - { path: ^/api/nfts, methods: DELETE, roles: PUBLIC_ACCESS }
+        - { path: ^/api/users, methods: POST, roles: PUBLIC_ACCESS}
+        - { path: ^/api/nfts, methods: DELETE, roles: ROLE_USER }
         - { path: ^/api/users, methods: GET , roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+#        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
