--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,7 +6,7 @@
 parameters:
 
     _defaults:
-        # ...
+        autowire: true
 services:
     App\Encoder\MultipartDecoder: # Assurez-vous que cette ligne est décommentée
         autowire: true
@@ -18,6 +18,7 @@ services:
     App\State\UserPasswordHasher:
         bind:
             $processor: '@api_platform.doctrine.orm.state.persist_processor'
+            tags: [ 'api_platform.state_processor' ]
     App\EventListener\DeserializeListener:
         tags:
             - { name: 'kernel.event_listener', event: 'kernel.request', method: 'onKernelRequest', priority: 2 }
