--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -74,7 +74,7 @@ security:
         - { path: ^/api/users, methods: POST, roles: PUBLIC_ACCESS}
         - { path: ^/api/nfts, methods: DELETE, roles: ROLE_USER }
         - { path: ^/api/users, methods: GET , roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
