--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
             provider: users
             jwt: ~
         main:
+            pattern: ^/auth
             json_login:
                 check_path: auth
                 username_path: username
