--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "league/oauth2-google": "^4.0",
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/cors-bundle": "^2.3",
+        "nelmio/security-bundle": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.23",
         "symfony/asset": "6.3.*",
