--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,7 +10,8 @@ framework:
     session:
         handler_id: null
         cookie_secure: true
-        cookie_samesite: lax
+        cookie_samesite: strict
+        cookie_httponly: true
         storage_factory_id: session.storage.factory.native
 
     #esi: true
