--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -6,5 +6,9 @@ nelmio_cors:
         allow_headers: ['Content-Type', 'Authorization']
         expose_headers: ['Link']
         max_age: 3600
-    paths:
-        '^/': null
+#    paths:
+#        '^/api/':
+#            allow_origin: [ '*' ]
+#            allow_headers: [ 'X-Custom-Auth' ]
+#            allow_methods: [ 'POST', 'PUT', 'GET', 'DELETE' ]
+#            max_age: 3600
