--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -70,7 +70,7 @@ security:
         - { path: ^/api/categories, method: GET, roles: PUBLIC_ACCESS }
         - { path: ^/api/galleries, method: GET, roles: PUBLIC_ACCESS }
         - { path: ^/api/galleries, methods: POST, roles: ROLE_USER }
-        - { path: ^/api/nfts, methods: POST, roles: ROLE_USER}
+        - { path: ^/api/nfts, methods: POST, roles: PUBLIC_ACCESS }
         - { path: ^/api/transactions, methods: POST, roles: PUBLIC_ACCESS }
         - { path: ^/api/users, methods: POST, roles: PUBLIC_ACCESS}
         - { path: ^/api/nfts, methods: DELETE, roles: ROLE_USER }
